appId: io.github.lordraydenmk.themoviedbapp
---
- launchApp
- tapOn: "Karate Kid: Legends"
- assertVisible: "After a family tragedy, kung fu prodigy Li Fong.*"
- runFlow: reusable/trigger-process-death.yml
- assertVisible: "After a family tragedy, kung fu prodigy Li Fong.*"
- back
- assertVisible: "Movies App"